--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Responsive Video Playlist</title>
-
-	<link rel="stylesheet" href="Videoplaylist.css">
-
+    <title>Detect Screen Recording</title>
 </head>
 <body>
+    <script>
+        function detectScreenRecording(callback) {
+            const constraints = {
+                video: {
+                    mandatory: {
+                        chromeMediaSource: 'desktop',
+                        chromeMediaSourceId: ''
+                    }
+                }
+            };
 
-	<div class="container">
-		<div class="main-video-container">
-			<video src="images/vid-9.mp4" loop controls class="main-video"></video>
-			<h3 class="main-vid-title">3D helicopter animation</h3>
-		</div>
-		<div class="video-list-container" id="videosList"></div>
-	</div>
+            navigator.mediaDevices.getUserMedia(constraints)
+                .then(stream => {
+                    // User is recording screen
+                    callback(true);
+                    stream.getTracks().forEach(track => track.stop());
+                })
+                .catch(error => {
+                    // User is not recording screen
+                    callback(false);
+                });
+        }
 
-	<script src="Videoplaylist.js"></script>
-	
+        detectScreenRecording(isRecording => {
+            if (isRecording) {
+                console.log('User is recording screen.');
+				document.write("screen opened successfully")
+            } else {
+                console.log('User is not recording screen.');
+				document.write("screen closes successfully")
 
+            }
+        });
+    </script>
 </body>
 </html>
